Fix z-index order

--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -1503,18 +1503,20 @@ html[data-ambientlight-enabled="true"] {
   }
 
   .ambientlight::before {
+    content: var(--ambientlight-debanding-content, none);
     position: absolute;
+    z-index: 2;
     width: 100%;
     height: 100%;
     left: 0;
     top: 0;
-    content: var(--ambientlight-debanding-content, none);
     background: var(--ambientlight-debanding-background, none);
     opacity: var(--ambientlight-debanding-opacity, 0);
   }
   .ambientlight::after {
     content: '';
     position: absolute;
+    z-index: 3;
     width: 100%;
     height: 100%;
     left: 0;
